# wallpaper-switcher

./: Cargo.toml  README.md
src/: blur.rs  cache.rs  classify.rs  main.rs
