[package]
name = "wallpaper-switcher"
description = "Hyprland wallpaper-switcher"
license = "MIT"
version = "1.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
walkdir = "2.5.0"
